Fixes #119 Check wording and phrasing

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -19,7 +19,7 @@ html
                         .col-lg-6
                             #triptih
                                 #t1import
-                                    #one_import.btn.btn-small.btn-mini.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsof project files of any version. Learn more…")
+                                    #one_import.btn.btn-small.btn-mini.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsoft project files of any version. Learn more…")
                                         | 1. Import MPP
                                 #t2tracktime
                                     #two_enter.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="System will identify tasks assigned to you and scheduled for current week. Learn more…")
@@ -50,7 +50,7 @@ html
                         h2 Import MPP
                         h4
                             ul
-                                li Import Microsof project files of any version
+                                li Import Microsoft project files of any version
                                 li Load data about tasks structure, schedule, resources & effort estimates
                                 li View project data online
                                 li Map resources from MPP to your project team
@@ -67,7 +67,7 @@ html
                         h2 Track time
                         h4
                             ul
-                                li Entering spent hours information is easier & faster then ever
+                                li Entering spent hours information is easier & faster than ever
                                 li No need to select task manually
                                 li System will identify tasks assigned to you and scheduled for current week
                                 li System will show you any other tasks you entered your time in lately
