--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -12,11 +12,11 @@ html
     body
         .container
             .row#titlesection
-                .col-lg-12
+                .col-12
                     .row
                         p.text-right.text-muted Private Alpha
                     .row
-                        .col-lg-6
+                        .col-12.col-sm-6.col-lg-6
                             #triptih
                                 #t1import
                                     #one_import.btn.btn-small.btn-mini.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsoft project files of any version. Learn more…")
@@ -27,7 +27,7 @@ html
                                 #t3content
                                     #three_analyze.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Analysis of spent time per person. Learn more…")
                                         | 3. Analyze reports
-                        .col-lg-6.clearfix.content-column#signupsection
+                        .col-12.col-sm-6.col-lg-6.clearfix.content-column#signupsection
                             .clearfix.icons
                                 img(src='/images/crow-logo.png', width='128', height='128', alt='crow-logo.png')
                             h2 Import MS Project ® files
@@ -39,7 +39,7 @@ html
                                 span or&nbsp;
                                     a.signin(href='#') Sign In
                     .row.moreinfo(style="height: 5%")
-                        .col-lg-12
+                        .col-12.col-sm-12.col-lg-12
                             a(href='#') More info&nbsp;
                                 i.icon-chevron-down
                     .row
