Fixed #92 Acquire legal to use logo and other markup stuff

--- a/Sources/Plancrow/public/landing/css/plncrw.webflow.css
+++ b/Sources/Plancrow/public/landing/css/plncrw.webflow.css
@@ -205,6 +205,10 @@ span.amp {
     font-weight: 200;
 }
 
+.tooltip-inner {
+    white-space: pre-wrap;
+}
+
 @media (max-width: 991px) {
     #triptih{
         width: 410px;
