Fixes #124 Sign in does not show a warning

--- a/Sources/Plancrow/views/landing-layout.jade
+++ b/Sources/Plancrow/views/landing-layout.jade
@@ -5,10 +5,9 @@ html
         title Plancrow
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        link(rel='stylesheet', type='text/css', href='/landing/main.css')
-        //link(rel='stylesheet', type='text/css', href='/landing.min.css')
+        //link(rel='stylesheet', type='text/css', href='/landing/main.css')
+        link(rel='stylesheet', type='text/css', href='/landing.min.css')
         link(rel='icon', type='image/x-icon', href='/landing/images/favicon.ico')
-        //link(rel='apple-touch-icon', href='https://y7v4p6k4.ssl.hwcdn.net/51d2715929d9cfe03a000001/51e07282241660ce78000001_webclip-gallio.png')
     body
         .container
             block landing-body
@@ -25,6 +24,5 @@ html
     script(type='text/javascript', src='/scripts/jade-hack/browser-jade.js')
     script(type='text/javascript', src='/scripts/jade-hack/jade-shim.js')
     //main requirejs module
-    //script(data-main='/LandingApp.js', type='text/javascript', src='/scripts/vendor/requirejs/require.js')
     script(data-main='/scripts/client/LandingApp.js', type='text/javascript', src='/scripts/vendor/requirejs/require.js')
     script(type='text/javascript', src='/landing/js/ga.js')
