--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -9,7 +9,7 @@ block landing-body
                 .col-12.col-sm-6.col-lg-6
                     #triptih
                         #t1import
-                            #one_import.btn.btn-small.btn-mini.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsoft project files of any version. \
+                            #one_import.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsoft project files of any version. \
                             Learn more ↓")
                                 | 1. Import MPP
                         #t2tracktime
