Fixes #128 Minor cleaning of pictures

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -80,7 +80,7 @@ block landing-body
     article.row
         .hidden-sm.col-sm-6.col-offset-2.col-lg-4.clearfix
             .clearfix.hidden-sm.featureimage
-                img(src='/landing/images/piggybank.png', alt='piggybank.png')
+                img(src='/landing/images/piggybank.jpg', alt='piggybank.jpg')
         .col-12.col-sm-6.col-lg-4.clearfix
             .featuretext
                 h2 1 for free&nbsp;&#151;&nbsp;
