--- a/Sources/Plancrow/views/terms.jade
+++ b/Sources/Plancrow/views/terms.jade
@@ -14,28 +14,21 @@ block landing-body
     .row
         .col-12
             p By using the Plancrow.com web site ("Service"), or any services of Plancrow, LLC ("Plancrow"), you are agreeing to be bound by the following terms and conditions ("Terms of Service"). IF YOU ARE ENTERING INTO THIS AGREEMENT ON BEHALF OF A COMPANY OR OTHER LEGAL ENTITY, YOU REPRESENT THAT YOU HAVE THE AUTHORITY TO BIND SUCH ENTITY, ITS AFFILIATES AND ALL USERS WHO ACCESS OUR SERVICES THROUGH YOUR ACCOUNT TO THESE TERMS AND CONDITIONS, IN WHICH CASE THE TERMS "YOU" OR "YOUR" SHALL REFER TO SUCH ENTITY, ITS AFFILIATES AND USERS ASSOCIATED WITH IT. IF YOU DO NOT HAVE SUCH AUTHORITY, OR IF YOU DO NOT AGREE WITH THESE TERMS AND CONDITIONS, YOU MUST NOT ACCEPT THIS AGREEMENT AND MAY NOT USE THE SERVICES.
-            p What information do we collect? 
-            p We collect information from you when you register on our site or place an order. 
+            ul
+                li  What information do we collect?
+                li  We collect information from you when you register on our site or place an order. When ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, company data or billing data.
+            ul
+                li What do we use your information for?
+                li Any of the information we collect from you may be used to process transactions. Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.
+            ul
+                li How do we protect your information?
+                li Any of the information we collect from you may be used to process transactions. Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.
+            ul
+                li Do we disclose any information to outside parties?
+                li We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. This does not include trusted third parties who assist us in operating our website, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others rights, property, or safety. However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.
+            ul
+                li Your Consent
+                li By using our site, you consent to our privacy policy.
 
-When ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, company data or billing data.
-
-            p What do we use your information for?  
-            p Any of the information we collect from you may be used to process transactions.
-
-Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.
-	
-            p How do we protect your information?  
-            p Any of the information we collect from you may be used to process transactions.
-
-Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.
-	
-            p Do we disclose any information to outside parties?    
-            p We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. This does not include trusted third parties who assist us in operating our website, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others rights, property, or safety. However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.
-	
-            p Your Consent     
-            p By using our site, you consent to our privacy policy.
-
-            p Changes to our Privacy Policy      
-            p If we decide to change our privacy policy, we will post those changes on this page, and/or send an email notifying you of any changes. 
-
+            p If we decide to change our privacy policy, we will post those changes on this page, and/or send an email notifying you of any changes.
             hr
