--- a/Sources/Plancrow/public/landing/main.css
+++ b/Sources/Plancrow/public/landing/main.css
@@ -2,5 +2,5 @@
 @import url('../scripts/vendor/bootstrap/dist/css/bootstrap.min.css');
 @import url('./css/plncrw.webflow.css');
 @import url('../scripts/vendor/font-awesome/css/font-awesome.min.css');
-@import url('../scripts/vendor/flat-ui-official/css/flat-ui.css');
+/*@import url('../scripts/vendor/flat-ui-official/css/flat-ui.css');*/
 
