--- a/Sources/Plancrow/views/landing-layout.jade
+++ b/Sources/Plancrow/views/landing-layout.jade
@@ -5,8 +5,8 @@ html
         title Plancrow
         meta(name='description', content='')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        link(rel='stylesheet', type='text/css', href='/landing/main.css')
-        //link(rel='stylesheet', type='text/css', href='/landing.min.css')
+        //link(rel='stylesheet', type='text/css', href='/landing/main.css')
+        link(rel='stylesheet', type='text/css', href='/landing.min.css')
         link(rel='icon', type='image/x-icon', href='/landing/images/favicon.ico')
     body
         .container
