--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -44,10 +44,10 @@ block landing-body
                 h4
                     ul
                         li Import Microsoft project files of any version
-                        li Load data about tasks structure, schedule, resources & effort estimates
-                        li View project data online
-                        li Map resources from MPP to your project team
-                        li Reload files multiple time without loosing anything (changes are merged)
+                        li Load data about a tasks structure, a schedule, resources & effort estimates
+                        li View the project data online
+                        li Map resources from MPP to your project team members
+                        li Reload files multiple times without losing anything (the changes will be merged)
         .col-sm-6.col-lg-5.hidden-sm.clearfix
             .featureimage
                 img(src='/landing/images/mpp.jpg', alt='mpp.jpg')
@@ -60,18 +60,18 @@ block landing-body
                 h2 Track time
                 h4
                     ul
-                        li Entering spent hours information is easier & faster than ever
-                        li No need to select task manually
-                        li System will identify tasks assigned to you and scheduled for current week
-                        li System will show you any other tasks you entered your time in lately
+                        li Entering spent hours is easier & faster than ever
+                        li No need to select a task manually
+                        li The system will identify the tasks assigned to you and scheduled for the current week
+                        li The system will show you any other tasks you entered your time in lately
     article.row#analyze
         .col-12.col-sm-6.col-offset-2.col-lg-4.clearfix
             .clearfix.featuretext
                 h2 Analyze reports
                 h4
                     ul
-                        li Overall chart for management
-                        li Project charts for project managers
+                        li The overall chart for management
+                        li The project chart for project managers
                         li Analysis of spent time per person
                         li Exports to MS Excel and other tools
         .hidden-sm.col-sm-6.col-lg-4.hidden-sm.clearfix
