Cannot reproduce, but should fix #134

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -9,16 +9,13 @@ block landing-body
                 .col-12.col-sm-6.col-lg-6
                     #triptih
                         #t1import
-                            #one_import.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsoft project files of any version. \
-                            Learn more ↓")
+                            #one_import.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsoft project files of any version. \n Learn more ↓")
                                 | 1. Import MPP
                         #t2tracktime
-                            #two_enter.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="System will identify tasks assigned to you and scheduled for current week. \
-                                Learn more ↓")
+                            #two_enter.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="System will identify tasks assigned to you and scheduled for current week. \n Learn more ↓")
                                 | 2. Track time
                         #t3content
-                            #three_analyze.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Analysis of spent time per person. \
-                                Learn more ↓")
+                            #three_analyze.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Analysis of spent time per person. \n Learn more ↓")
                                 | 3. Analyze reports
                 .col-12.col-sm-6.col-lg-6.clearfix.content-column#signupsection
                     .clearfix.icons
