Fixes #137 Usability issue - form data is lost when user clicks terms & privacy link in Sign Up form

--- a/Sources/Plancrow/views/landing-layout.jade
+++ b/Sources/Plancrow/views/landing-layout.jade
@@ -14,7 +14,7 @@ html
             .footer.row
                 .col-6.text-left.bottom-menu
                     a(href='mailto:info@plancrow.com') Contact Us
-                    a(href='/terms') Terms&nbsp;
+                    a(href="/terms", target="_blank") Terms&nbsp;
                         span.amp &amp;&nbsp;
                         | privacy
                 .col-6.text-right
