Fixes #136 Sign in-up links do not work until labels are loaded for the schema image

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -5,6 +5,7 @@ block landing-body
     script(type='text/javascript', src='/scripts/jade-hack/browser-jade.js')
     script(type='text/javascript', src='/scripts/jade-hack/jade-shim.js')
     //main requirejs module
+    //script(data-main='/scripts/client/LandingApp.js', type='text/javascript', src='/scripts/vendor/requirejs/require.js')
     script(data-main='/scripts/client/LandingApp.js', type='text/javascript', src='/scripts/vendor/requirejs/require.js')
 
     .row#titlesection
