--- a/Sources/Plancrow/public/landing/css/plncrw.webflow.css
+++ b/Sources/Plancrow/public/landing/css/plncrw.webflow.css
@@ -1,7 +1,7 @@
 html {
     height: 100%;
     margin: 0;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
 }
 
 body {
@@ -11,7 +11,7 @@ body {
     color: #333;
     font-size: 12px;
     line-height: 20px;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
     overflow-x: hidden;
 }
 
