Fixes #139 More grammar errors found

--- a/Sources/Plancrow/views/landing.jade
+++ b/Sources/Plancrow/views/landing.jade
@@ -12,7 +12,7 @@ block landing-body
                             #one_import.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Import Microsoft project files of any version. \n Learn more ↓")
                                 | 1. Import MPP
                         #t2tracktime
-                            #two_enter.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="System will identify tasks assigned to you and scheduled for current week. \n Learn more ↓")
+                            #two_enter.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="The system will identify the tasks assigned to you and scheduled for the current week. \n Learn more ↓")
                                 | 2. Track time
                         #t3content
                             #three_analyze.btn.btn-warning(style="opacity: 0", data-toggle="tooltip", title="Analysis of spent time per person. \n Learn more ↓")
